Display grid, grid-column e grid-row

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./assets/img/Favicon2.png" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style/style.css">
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="assets/style/flex.css">
+    <link rel="stylesheet" href="assets/style/grid.css">
 </head>
 
 <body>
