mergulhando no grid

--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
                     <img src="./assets/img/evento-1.png" alt="Velas em fundo preto.">
                     <h3>Festival das Luzes</h3>
                     <h4>14/08/22</h4>
+                    <div class="final">
                     <h5>São Paulo | SP</h5>
                     <button>Ver</button>
+                    </div>
                 </li>
                 <li class="eventos__item">
                     <img src="./assets/img/evento-2.png" alt="Pessoas em uma festa">
@@ -128,8 +130,8 @@
                     <h5>São Paulo | SP</h5>
                     <button>Ver</button>
                 </li>
-                <li class="eventos__botao"><button>Ver mais</button></li>
             </ul>
+             <div class="eventos__botao"><button>Ver mais</button></div>
         </section>
         <section class="agenda">
             <h2 class="agenda__titulo">Coloque na sua agenda!</h2>
@@ -206,8 +208,8 @@
                         <button>Avise-me</button>
                     </div>
                 </li>
-                <li class="agenda__botao"><button>Ver mais</button></li>
             </ul>
+            <div class="eventos__botao"><button>Ver mais</button></div>
         </section>
     </main>
     <footer class="rodape">
